--- a/src/survey/pages/home.css
+++ b/src/survey/pages/home.css
@@ -1,25 +1,67 @@
-li{
+li {
     font-weight: bold;
 }
-.initial__window__paragraph{
+
+.initial__window__paragraph {
     font-size: 1.5rem;
     margin-top: 1rem;
     margin-bottom: 1rem;
     text-align: left;
-
 }
 
-.study__members{
+.study__members {
     font-weight: normal;
 }
-.home__card{
+
+.home__card {
     justify-content: center;
     font-size: 1.5rem;
     padding: 2rem 8rem 2rem;
     margin-left: 20%;
     margin-right: 20%;
 }
-.bold__paragraph{
+
+.bold__paragraph {
     font-weight: bold;
 }
 
+/* Media queries for responsiveness */
+@media (max-width: 768px) {
+    .home__card {
+        padding: 1rem 2%;
+        margin-left: 2%;
+        margin-right: 2%;
+    }
+
+    .initial__window__paragraph {
+        font-size: 1.2rem;
+    }
+
+    .study__members {
+        font-size: 1.2rem;
+    }
+
+    li {
+        font-size: 1.2rem;
+    }
+}
+
+@media (max-width: 480px) {
+    .home__card {
+        padding: 1rem 1%;
+        margin-left: 1%;
+        margin-right: 1%;
+    }
+
+    .initial__window__paragraph {
+        font-size: 1rem;
+    }
+
+    .study__members {
+        font-size: 1rem;
+    }
+
+    li {
+        font-size: 1rem;
+    }
+}
